--- a/ios/booked.xcodeproj/xcshareddata/xcschemes/nativedemo.xcscheme
+++ b/ios/booked.xcodeproj/xcshareddata/xcschemes/nativedemo.xcscheme
@@ -31,7 +31,7 @@
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "nativedemo.app"
                BlueprintName = "nativedemo"
-               ReferencedContainer = "container:nativedemo.xcodeproj">
+               ReferencedContainer = "container:booked.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -45,7 +45,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "nativedemoTests.xctest"
                BlueprintName = "nativedemoTests"
-               ReferencedContainer = "container:nativedemo.xcodeproj">
+               ReferencedContainer = "container:booked.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -63,7 +63,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "nativedemoTests.xctest"
                BlueprintName = "nativedemoTests"
-               ReferencedContainer = "container:nativedemo.xcodeproj">
+               ReferencedContainer = "container:booked.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -73,7 +73,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "nativedemo.app"
             BlueprintName = "nativedemo"
-            ReferencedContainer = "container:nativedemo.xcodeproj">
+            ReferencedContainer = "container:booked.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -96,7 +96,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "nativedemo.app"
             BlueprintName = "nativedemo"
-            ReferencedContainer = "container:nativedemo.xcodeproj">
+            ReferencedContainer = "container:booked.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -115,7 +115,7 @@
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "nativedemo.app"
             BlueprintName = "nativedemo"
-            ReferencedContainer = "container:nativedemo.xcodeproj">
+            ReferencedContainer = "container:booked.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
