--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
     "android": "npm run install && npm run start",
-    "clean": "watchman watch-del-all && npm cache clean && cd android && ./gradlew clean && cd .."
+    "clean": "watchman watch-del-all && npm cache clean && cd android && ./gradlew clean && cd ..",
+    "post-install": "rndebugger-open"
   },
   "dependencies": {
     "react": "16.0.0-alpha.12",
